--- a/src/home.html
+++ b/src/home.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="./home.css">
   <script src="http://localhost:3000/index.js"></script>
   <!-- <script src="../dist/index.js"></script> -->
   <title>Dont-drop</title>
