add basic postcss config

--- a/src/modal/modal.html
+++ b/src/modal/modal.html
@@ -1,1 +1,9 @@
-<h1 class="basic-modal">Test html modal</h1>
+<div class="dont-modal">
+  <div class="dont-modal-dialog">
+    <div class="dont-modal-content">
+      <div class="dont-modal-header"><h5>Modal title</h5><span class="dont-close">&times;</span></div>
+      <div class="dont-modal-body"><p>text in a modal!</p></div>
+      <div class="dont-modal-footer"><button>cancel</button></div>
+    </div>
+  </div>
+</div>
