--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="/bundle.js"></script>
-  <link rel="stylesheet" type="text/css" href="./style/mystyle.css">
+  <link rel="stylesheet" type="text/html" href="./style/mystyle.css">
   <title>Dont-drop</title>
 </head>
 <body>
