--- a/src/modal/modal.html
+++ b/src/modal/modal.html
@@ -1,4 +1,4 @@
-<div class="dont-modal">
+<!-- <div class="dont-modal">
   <div class="dont-modal-dialog">
     <div class="dont-modal-content">
       <div class="dont-modal-header"><p>Modal title</p><span class="dont-close" id="dont-modal-cancel">&times;</span></div>
@@ -6,4 +6,4 @@
       <div class="dont-modal-footer"><button class="dont-btn-danger" id="dont-modal-cancel">cancel</button></div>
     </div>
   </div>
-</div>
+</div> -->
